--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
     "pg": "^8.14.1",
+    "uuid": "^11.1.0",
     "yarn": "^1.22.22"
   },
   "scripts": {
